objects/Warehouse_Upcharge_Reference_Table__c.object
<CustomObject>
    <description>Reference tables to perform Warehouse Upcharge calculations.</description>
    <fields>
        <fullName>Bev_Code__c</fullName>
        <label>Bev Code</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CountryID__c</fullName>
        <label>CountryID</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pack__c</fullName>
        <label>Pack</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Size__c</fullName>
        <label>Size</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Whse_Upcharge__c</fullName>
        <label>Whse Upcharge</label>
        <precision>8</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <label>Warehouse Upcharge Reference Table</label>
    <nameField>
        <label>Warehouse Upcharge Reference Table Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Warehouse Upcharge Reference Table</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>